--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - images/xylophone.jpg
+    - images/background.jpg
+    - images/background1.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
